--- a/Etrafe3ly/src/theme/variables.scss
+++ b/Etrafe3ly/src/theme/variables.scss
@@ -39,7 +39,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  ourColor: #f7620e
+  ourColor: #f7620e,
+  gold: #fdba12
 );
 
 
